Fixes the menu on small screen w/contact submission message

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -203,7 +203,7 @@
     --line-tx-bottom: rotate(45deg);
     --line-tx-top: rotate(-45deg);
     --line-width: 1px;
-    --menu-layer: 1;
+    --menu-layer: 2;
     --menu-opacity: 1;
 
     height: 100%;
